--- a/index.html
+++ b/index.html
@@ -345,12 +345,12 @@ iframe {
                 </div>
             </nav>
             <div class = "auraBrand">
-                <center><img src = "/Users/atharvajain/Desktop/aura skin/aura.png">
+                <center><img src = "aura.png">
                 <h1><b>Aura Skin Cosmetology Clinic</b></h1></center>
             </div>
             <div class = "about-me" id = "about">
                 <div class = "nipun-jain">
-                    <img src = "/Users/atharvajain/Desktop/aura skin/papa.jpg" class = "profile-image">
+                    <img src = "papa.jpg" class = "profile-image">
                 </div>
                 <div class = "column-2">
                     <center><h3><b>Dr. Nipun Jain</b></h3></center>
