--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ iframe {
                                     <ion-icon name="logo-whatsapp"></ion-icon>
                                 </a>
                                 <a href = "https://www.practo.com/Delhi/doctor/dr-nipun-jain-dermatologist-cosmetologist-2">
-                                    <img class = "practo-icon" src = "/Users/atharvajain/Desktop/aura skin/practo.svg">
+                                    <img class = "practo-icon" src = "practo.svg">
                                 </a>
                             </h2>
                         </center></p>
